test_suite5/ALAN/test_suite/alan-2022-examples/failing/004010_mutation.alan
source m begin leave(6571) while 9 do relax end end
